apps/monitoring/blackbox_exporter/components/istio/istio-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: blackbox-exporter
spec:
  hosts:
    - blackbox-exporter
  gateways:
    - istio-system/gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: blackbox-exporter
            port:
              number: 80
